大概会节省一些流量

--- a/ext.html
+++ b/ext.html
@@ -272,10 +272,10 @@
 <div>
 <video id="sc" controls width="100%">
   <!-- type需要对应上引用的资源 -->
-  <source src="./src/psc480.mp4" type="video/mp4">
+  <source src="./src/psc480.mp4" preload="none" type="video/mp4">
 </video>
 <p><strong>Shelter &#x4E5F;&#x8D85;&#x8D5E;&#x7684;&#xFF01;</strong></p>
-<video id="sh" controls width="100%">
+<video id="sh" controls preload="none" width="100%">
   <!-- type需要对应上引用的资源 -->
   <source src="./src/ps480.mp4" type="video/mp4">
 </video>
