上次提交忘记生成新的html

--- a/ext.html
+++ b/ext.html
@@ -270,9 +270,9 @@
 
 </pre><p><strong>&#x90D1;&#x91CD;</strong>&#x63A8;&#x8350;&#x4E00;&#x4E0B; &#x50BB;&#x9887;(Porter Robinson) <strong>WTM &#x5439;&#x7206;&#xFF01;</strong></p>
 <div>
-<video id="sc" controls width="100%">
+<video id="sc" controls preload="none" width="100%">
   <!-- type需要对应上引用的资源 -->
-  <source src="./src/psc480.mp4" preload="none" type="video/mp4">
+  <source src="./src/psc480.mp4" type="video/mp4">
 </video>
 <p><strong>Shelter &#x4E5F;&#x8D85;&#x8D5E;&#x7684;&#xFF01;</strong></p>
 <video id="sh" controls preload="none" width="100%">
