--- a/ext.html
+++ b/ext.html
@@ -315,6 +315,17 @@
 
 <p>&#x9700;&#x8981;&#x6CE8;&#x610F;&#x7684;&#x4E00;&#x70B9;&#x662F;&#xFF0C; todo &#x548C;&#x4EE3;&#x7801;&#x5757;  &#x88AB;&#x5305;&#x5728; <strong>&#x6298;&#x53E0;</strong> &#x4E2D;&#x65F6;&#x4F1A;&#x6709;&#x70B9;&#x51B2;&#x7A81;&#xFF0C;&#x53EF;&#x80FD;&#x4F1A;&#x51FA;&#x73B0;&#x683C;&#x5F0F;&#x9519;&#x8BEF;&#xFF0C;&#x614E;&#x7528;&#xFF01;&#xFF01;&#xFF01;<br>
 &#x5982;&#x679C;&#x89C9;&#x5F97;&#x62D3;&#x5C55;&#x90E8;&#x5206;&#x5199;&#x8D77;&#x6765;&#x5F88;&#x96BE;&#x53D7;&#x7684;&#x8BDD;&#x2026;&#x2026;&#x53EF;&#x4EE5;&#x81EA;&#x5DF1;&#x5728;vscode&#x4E2D;&#x5199; <strong><a href="https://cn.bing.com/search?q=vocode+snippet">snippets</a></strong></p>
+<h2 class="mume-header" id="%E6%8F%92%E5%85%A5%E9%9F%B3%E9%A2%91">&#x63D2;&#x5165;&#x97F3;&#x9891;</h2>
+
+<p>&#x4F7F;&#x7528;&#x4EE5;&#x4E0B; <code>html</code> &#x5373;&#x53EF;&#x63D2;&#x5165;&#x97F3;&#x9891;,&#x7531;&#x4E8E;&#x53EA;&#x662F;&#x97F3;&#x9891;,&#x4E0D;&#x50CF;&#x89C6;&#x9891;&#x90A3;&#x6837;&#x53EF;&#x80FD;&#x4F1A;&#x6709;&#x4E00;&#x4E9B;&#x5947;&#x5947;&#x602A;&#x602A;&#x7684;&#x8981;&#x6C42;</p>
+<pre data-role="codeBlock" data-info="text" class="language-text"><code>&lt;audio controls&gt;
+  &lt;source src=&quot;XXX.mp3&quot; type=&quot;audio/mp3&quot;&gt;
+&lt;/audio&gt;
+</code></pre><audio controls style="width:100%">
+  <source src="./src/Miruku 100bpm.mp3" type="audio/mpeg">
+</audio>
+<p>&#x5927;&#x6982;&#x662F;&#x4E0D;&#x9700;&#x8981;&#x8C03;&#x6574;&#x6837;&#x5F0F;&#x7684;<br>
+&#x9876;&#x591A;&#x52A0;&#x4E2A; <code>style=&quot;width:100%&quot;</code></p>
 <h2 class="mume-header" id="%E6%96%87%E4%BB%B6%E9%A2%84%E8%A7%88%E4%B8%8D%E7%9B%B4%E6%8E%A5%E4%B8%8B%E8%BD%BD">&#x6587;&#x4EF6;&#x9884;&#x89C8;(&#x4E0D;&#x76F4;&#x63A5;&#x4E0B;&#x8F7D;)</h2>
 
 <blockquote>
@@ -362,6 +373,7 @@
 <li><a href="#%E6%B3%A8%E6%84%8F%E4%BA%8B%E9%A1%B9">&#x6CE8;&#x610F;&#x4E8B;&#x9879;</a></li>
 </ul>
 </li>
+<li><a href="#%E6%8F%92%E5%85%A5%E9%9F%B3%E9%A2%91">&#x63D2;&#x5165;&#x97F3;&#x9891;</a></li>
 <li><a href="#%E6%96%87%E4%BB%B6%E9%A2%84%E8%A7%88%E4%B8%8D%E7%9B%B4%E6%8E%A5%E4%B8%8B%E8%BD%BD">&#x6587;&#x4EF6;&#x9884;&#x89C8;(&#x4E0D;&#x76F4;&#x63A5;&#x4E0B;&#x8F7D;)</a></li>
 <li><a href="#%E6%96%87%E4%BB%B6%E4%B8%8B%E8%BD%BD%E7%9B%B4%E6%8E%A5%E4%B8%8B%E8%BD%BD">&#x6587;&#x4EF6;&#x4E0B;&#x8F7D;(&#x76F4;&#x63A5;&#x4E0B;&#x8F7D;)</a>
 <ul>
