--- a/vega.html
+++ b/vega.html
@@ -146,6 +146,7 @@
     vegaEmbed('#vis', config);
 </script>
 <p>&#x81F3;&#x4E8E;&#x8FD9;&#x79CD;&#x5199;&#x6CD5;&#x5230;&#x5E95;&#x7B97;&#x662F;&#x65B9;&#x4FBF;&#x8FD8;&#x662F;&#x4E0D;&#x65B9;&#x4FBF;,&#x6211;&#x5C31;&#x4E0D;&#x77E5;&#x9053;&#x4E86;</p>
+<p><a href="./index.html">&lt;&#x2013;&#x8FD4;&#x56DE;</a></p>
 
       </div>
       <div class="md-sidebar-toc"><ul>
